[gd_scene load_steps=3 format=3 uid="uid://bhhu5180atxod"]

[ext_resource type="Script" path="res://MobileControl.gd" id="1_dpc6p"]
[ext_resource type="Texture2D" uid="uid://bx31iusbd7w1j" path="res://res/analogstick_icon.png" id="2_1c6pc"]

[node name="MobileControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dpc6p")

[node name="Analog stick" type="Control" parent="."]
z_index = 200
anchors_preset = 0
offset_left = 528.0
offset_top = 267.0
offset_right = 528.0
offset_bottom = 267.0

[node name="Analog" type="Button" parent="Analog stick"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.490196)
layout_mode = 1
anchors_preset = -1
anchor_left = -1.533
anchor_top = -1.538
anchor_right = -1.533
anchor_bottom = -1.538
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0

[node name="Sprite2D" type="Sprite2D" parent="Analog stick"]
modulate = Color(1, 1, 1, 0.490196)
scale = Vector2(0.219, 0.225)
texture = ExtResource("2_1c6pc")

[node name="Timer" type="Timer" parent="Analog stick"]
wait_time = 0.2
autostart = true

[node name="Action" type="Button" parent="."]
z_index = 200
layout_mode = 0
offset_left = 8.0
offset_top = 224.0
offset_right = 112.0
offset_bottom = 320.0
text = "Action"

[connection signal="button_down" from="Analog stick/Analog" to="." method="_on_analog_pressed"]
[connection signal="button_up" from="Analog stick/Analog" to="." method="_on_analog_button_up"]
[connection signal="pressed" from="Analog stick/Analog" to="." method="_on_analog_pressed"]
[connection signal="timeout" from="Analog stick/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Action" to="." method="_on_action_pressed"]
